Fix dropdown menu positioning.

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,12 @@ body {
   background-color: black;
 }
 
+.dropdown-pos {
+  position: absolute;
+  top: 2vh;
+  left: 1vw;
+}
+
 .info-card {
     color: white;
     background-color: black;
