--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,13 @@ body {
   background-color: black;
 }
 
+.body-diagrams {
+  width: 70vw;
+  position: absolute;
+  left: 1vw;
+  top: 4vh;
+}
+
 .dropdown-pos {
   position: absolute;
   top: 2vh;
